# german-clinical-nlp

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  healthcheck.py  pyproject.toml
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  RETROSPECTIVE.md  ROADMAP.md  STATE.md  config.json
.planning/milestones/: v1.0-REQUIREMENTS.md  v1.0-ROADMAP.md
.planning/phases/01-foundation-core-infrastructure/: 01-01-SUMMARY.md  01-CONTEXT.md  01-DISCUSSION-LOG.md  01-RESEARCH.md  01-REVIEW.md  01-VERIFICATION.md
.planning/phases/02-entity-extraction-pipeline/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-03-PLAN.md  02-03-SUMMARY.md  02-CONTEXT.md  02-DISCUSSION-LOG.md  02-REVIEW-FIX.md  02-REVIEW.md  02-VERIFICATION.md
.planning/phases/03-deployment-documentation/: 03-01-PLAN.md  03-01-SUMMARY.md  03-02-PLAN.md  03-02-SUMMARY.md  (+7 more)
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
data/examples/: diagnosis_extraction.json  medication_los_extraction.json  temporal_extraction.json
data/samples/: README.md  ggponc_samples.json
docs/: ARCHITECTURE.md
scripts/: extract_samples.py
src/: __init__.py  config.py  main.py
src/api/: extract.py  health.py  models.py
src/extraction/: __init__.py  base.py  clinical.py  temporal.py
src/models/: loader.py
src/prompts/: __init__.py  clinical_prompt.py  temporal_prompt.py
src/schemas/: __init__.py  entities.py
src/validation/: validators.py
tests/: test_api.py  test_extraction.py  test_validation.py
